# Profiidev_hibernation

./: .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  docker-compose.yml  flake.nix  package-lock.json  package.json
.github/workflows/: auto-merge-flake-updates.yml  auto-merge-release.yml  auto-merge.yml  checks.yml  cli-release.yml  codeql-analysis-injected.yml  create-release.yml  flake-lock-update.yml  flake.yml  release-trigger.yml  release.yml  test-action.yml
action/: .gitignore  package.json  vite.config.ts
action/src/: index.ts
backend/: .env.example  Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/entities/: cache.rs  cache_access.rs  group.rs  mod.rs  nar.rs  nar_info.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260126_155842_group.rs  m20260317_135750_token.rs  m20260319_192505_cache.rs  m20260319_193259_nar.rs  m20260319_194332_nar_info.rs  m20260320_164249_cache_access.rs
backend/src/: cli.rs  config.rs  group.rs  host.rs  main.rs  nix.rs  permissions.rs  settings.rs  setup.rs  token.rs  user.rs  utils.rs  version.rs
backend/src/auth/: cli_auth.rs  config.rs  jwt_auth.rs  jwt_state.rs  logout.rs  mod.rs  oidc.rs  password.rs  res.rs  test_token.rs
backend/src/cache/: cleanup.rs  dedupe.rs  hash.rs  management.rs  mod.rs  push.rs  storage.rs
backend/src/db/: cache.rs  group.rs  group_ext.rs  mod.rs  nar.rs  settings.rs  user.rs  user_ext.rs
backend/src/mail/: mod.rs  reset.rs  state.rs  test.rs
backend/src/user/: account.rs  management.rs  mod.rs
backend/src/ws/: mod.rs  state.rs  updater.rs
cli/: Cargo.toml
cli/src/: api.rs  auth.rs  cli.rs  config.rs  main.rs  push.rs
frontend/: openapi-ts.config.ts  package.json
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/: permissions.svelte.ts
frontend/src/lib/backend/: auth.svelte.ts  cache.svelte.ts  cli.svelte.ts  config.ts  groups.svelte.ts  mail.svelte.ts  settings.svelte.ts  setup.svelte.ts  updater.svelte.ts  user.svelte.ts  util.svelte.ts
frontend/src/lib/client/: client.gen.ts  index.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
frontend/src/lib/components/: nav.svelte.ts
frontend/src/lib/components/form/: FormDateInput.svelte  MultiStepForm.svelte
frontend/src/lib/components/navigation/sidebar/: Sidebar.svelte  SidebarContent.svelte  SidebarHeader.svelte  SidebarUser.svelte
frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/account/auth/: +page.svelte
frontend/src/routes/account/general/: +page.svelte
frontend/src/routes/auth/cli/: +page.svelte
frontend/src/routes/caches/: +page.svelte  +page.ts
frontend/src/routes/caches/[uuid]/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/caches/[uuid]/search/: +page.svelte  Actions.svelte  table.svelte.ts
frontend/src/routes/caches/[uuid]/settings/: +page.svelte  schema.svelte.ts
frontend/src/routes/caches/create/: +page.svelte  Information.svelte  schema.svelte.ts
frontend/src/routes/groups/: +page.svelte  +page.ts  table.svelte.ts
frontend/src/routes/groups/[uuid]/: +page.svelte  +page.ts  CacheAccess.svelte  Permissions.svelte  schema.svelte.ts
frontend/src/routes/groups/create/: +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/password/forgot/: +page.svelte
frontend/src/routes/password/reset/: +page.svelte
frontend/src/routes/settings/: +layout.svelte  +page.server.ts
frontend/src/routes/settings/mail/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/settings/user/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/setup/: +page.svelte  +page.ts  AdminUser.svelte  DatabaseSetup.svelte
frontend/src/routes/tokens/: +page.svelte  +page.ts  table.svelte.ts
frontend/src/routes/tokens/[uuid]/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/tokens/create/: +page.svelte  Information.svelte
frontend/src/routes/users/: +page.svelte  +page.ts  table.svelte.ts
frontend/src/routes/users/[uuid]/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/users/create/: +page.svelte  +page.ts  Information.svelte
shared/: Cargo.toml
shared/src/: lib.rs  pool.rs  sig.rs
shared/src/api/: push.rs
