[package]
name = "backend"
version = "0.2.2"
edition = "2024"

[dependencies]
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
shared = { path = "../shared" }
centaurus = { version = "0.4.13", features = [
  "axum",
  "logging",
  "sea-orm",
  "uuid",
  "hmac",
  "argon2",
  "base64",
  "rsa",
  "auth",
  "jsonwebtoken",
  "reqwest",
  "lettre",
  "url",
  "image",
] }
uuid = { version = "1.23.0", features = ["v4"] }
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "1.1.20", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
axum = { version = "0.8.8", features = ["macros", "ws", "tracing"] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
tracing = "0.1.44"
tokio = { version = "1.50.0", features = ["signal"] }
http = "1.4.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
figment = { version = "0.10.19", features = ["env"] }
futures-util = "0.3.32"
serde_json = "1.0.149"
chrono = "0.4.44"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "form", "http3"] }
rsa = "0.9.10"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
time = "0.3.47"
url = { version = "2.5.8", features = ["serde"] }
lettre = { version = "0.11.20", default-features = false, features = [
  "smtp-transport",
  "rustls",
  "builder",
  "rustls-native-certs",
  "ring",
  "tokio1-rustls",
] }
md5 = "0.8.0"
image = { version = "0.25.10", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
] }
base64 = "0.22.1"
tower_governor = { version = "0.8.0", features = [
  "axum",
], default-features = false }
governor = "0.10.4"
dashmap = "6.1.0"
async-compression = { version = "0.4.41", features = ["tokio", "zstd"] }
sha2 = "0.11.0"
tokio-util = { version = "0.7.18", features = ["io"] }
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.128.0", features = ["behavior-version-latest"] }
regex = "1.12.3"
addr = "0.15.6"
tower-service = "0.3.3"

[[bin]]
name = "backend"
path = "src/main.rs"
