[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
harmonia-store-remote = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
rusqlite = "0.32.1"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1.44"
async-compression = { version = "0.4.41", features = ["tokio", "zstd"] }
