[package]
name = "hibernation"
version = "0.1.0"
edition = "2024"
description = "A CLI for the hibernation nix cache"

[dependencies]
harmonia-store-remote = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "fs", "io-std"] }
tracing = "0.1.44"
async-compression = { version = "0.4.41", features = ["tokio", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
url = { version = "2.5.8", features = ["serde"] }
centaurus = { version = "0.4.13", default-features = false, features = [
  "serde",
  "error",
  "url",
  "logging",
  "serde_json",
  "reqwest",
] }
dirs = "6.0.0"
serde_json = "1.0.149"
clap = { version = "4.6.0", features = ["derive"] }
opener = "0.8.4"
reqwest = { version = "0.13.2", features = ["json", "form", "http3"] }
