[package]
name = "hibernation"
version = "0.2.3"
edition = "2024"
description = "A CLI for the hibernation nix cache"
license = "GPL-2.0-only"
repository = "https://github.com/Profiidev/hibernation"

[dependencies]
harmonia-store-remote = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
harmonia-protocol = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
shared = { path = "../shared" }
tokio = { version = "1.51.0", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-std",
] }
tracing = "0.1.44"
async-compression = { version = "0.4.41", features = ["tokio", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
url = { version = "2.5.8", features = ["serde"] }
centaurus = { version = "0.7.0", default-features = false, features = [
  "serde",
  "error",
  "url",
  "logging",
  "serde_json",
  "reqwest",
] }
dirs = "6.0.0"
serde_json = "1.0.149"
clap = { version = "4.6.0", features = ["derive"] }
opener = "0.8.4"
reqwest = { version = "0.13.2", features = ["json", "form", "http3", "stream"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
futures-core = "0.3.32"
bytes = "1.11.1"
tokio-util = "0.7.18"
sha2 = "0.11.0"
indicatif = "0.18.4"
color-eyre = "0.6.5"
tracing-subscriber = "=0.3.19"
tracing-error = "0.2.1"
tracing-indicatif = "=0.3.13"
