[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
tokio = { version = "1.50.0", features = [] }

[lib]
path = "src/lib.rs"
